--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-vue": "^9.16.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
+    "supabase": "^1.100.1",
     "typescript": "~5.1.6",
     "vite": "^4.4.9",
     "vue-tsc": "^1.8.8"
